--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "jest --detectOpenHandles"
+    "jest-test": "jest --forceExit ./Jest-test"
   },
   "keywords": [],
   "author": "",
